--- a/EJERCICIOS/1. VARIABLES.md
+++ b/EJERCICIOS/1. VARIABLES.md
@@ -3,14 +3,41 @@ Vamos a escribir el código necesario y posteriormente a llevarlo a la página d
 
 1. Escribe un ¡Hola Mundo! en Java
      
-     Escribe aqui tu código
-     
+          public class HolaMundo {
+               public static void main(String[] args) {
+                    System.out.println("Hola Mundo");
+
+
+               }
+
+
+          }
+
 2. Realiza un programa que realice las 4 operaciones básicas(suma, resta, división y multplicación) en Java e imprima los resultados
 
     Escribe aqui tu código
     
 3. Ingresando cuatro notas de un alumno imprime su promedio con su nombre.
 
-    Escribe aqui tu código
-    
+              import java.util.Scanner; //Importamos la libreria, SDK la trae 
+          public class Promedio {
+              public static void main(String[] args) {
+                  Scanner in = new Scanner(System.in); //Lo que hace es traer la clase system para permitir ingresar datos, (in) es un nombre que damos nosotros, el segundo es parte del System
+                  String nombre="";
+                  float num1 = 0,num2 = 0, num3 = 0, num4 = 0, sum= 0, prom= 0;
+                  System.out.println("Cual es el nombre del alumno?");   //pedimos el nombre
+                  nombre = in.nextLine();  //Lo almacena en la variable in es el metodo creado y Line es de texto, para numeros usamos Int, in es el metodo creado, si le das otro nombre aqui va 
+                  System.out.println("Dame la primera calificacion");
+                  num1 = in.nextInt();
+                  System.out.println("Dame la segunda calificacion");
+                  num2 = in.nextInt();
+                  System.out.println("Dame la tercera calificacion");
+                  num3 = in.nextInt();
+                  System.out.println("Dame la cuarta calificacion");
+                  num4 = in.nextInt();
+                  sum = num1 + num2 + num3 + num4;
+                  prom = (num1+num2+num3+num4)/4;
+                  System.out.println(" El promedio del alumno " + nombre + " es " + prom);
+              }
+          }
  4. Calcular el porcentaje que debe pagar un cliente, en la compra de una motocicleta a plazos en un periodo de 6 meses, si el interés mensual progresivo es de 3.5 % .
