--- a/EJERCICIOS/3. SENTENCIAS.md
+++ b/EJERCICIOS/3. SENTENCIAS.md
@@ -1,7 +1,30 @@
 # Ejercicio 3
 1 Ordenar 3 números, pedidos por consola, de mayor a menor.
 
-      tu código aqui
+     public class MenorAMayor {
+        public static void main(String[] args) {
+        int num1=0, num2=0, num3=0;
+        Scanner in = new Scanner(System.in);
+        System.out.println("Dame el numero 1");
+        num1 = in.nextInt();
+        System.out.println("Dame el numero 2");
+        num2 = in.nextInt();
+        System.out.println("Dame el numero 3");
+        num3 = in.nextInt();
+        
+        if(num1<num2) && (num1<num3){
+            if (num2<num3){
+                            System.out.println("el orden es:" num1 ", " num2 ", " num3);
+        else {
+            System.out.printIn("el orden es:" num1 ", " num3 ", "num2);
+        }
+            }
+            if (num2<num1) && (num2<num3){
+                System.out.println("el orden es:" num2 " " )
+            }
+        }
+        
+}
 
 2  Pedir un número entre 0 y 99999 y decir cuantas cifras tiene.
 
